# rendercontrol3d

./: CMakeLists.txt  Dockerfile  docker-build.sh  docker-run.sh  install-qt6  main.cpp  rect3d-camera-2d.qml  rect3d-camera-no2d.qml  rect3d-camera.qml  rect3d-cube-2d.qml  rect3d-cube.qml  rect3d.qml  run.sh
